deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-hello-world 
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: nginx-hello-world 
  template: 
    metadata: 
      labels: 
        app: nginx-hello-world 
    spec: 
      containers: 
      - name: nginx-hello-world 
        image: localhost:32000/nginx-hello-world:latest 
        ports: 
        - containerPort: 80 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-service 
spec: 
  selector: 
    app: nginx-hello-world 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 80
